--- a/css/index.css
+++ b/css/index.css
@@ -15,11 +15,6 @@ html {
     padding: 0;
     /* Prevent that nasty white flash as the background downloads */
     background-color: #252525;
-    /* Background image by Jakob Körber on Unsplash */
-    background-image: url(/images/jakob-korber-Xnz6Iq3BUbE-unsplash-compressed.jpg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
 }
 
 /* Typography */
@@ -338,6 +333,16 @@ footer p {
     }
     nav.topnav a:nth-of-type(2) {
         margin-top: 1rem;
+    }
+}
+
+@media only screen and (min-width : 481px) {
+    html {
+    /* Background image by Jakob Körber on Unsplash */
+        background-image: url(/images/jakob-korber-Xnz6Iq3BUbE-unsplash-compressed.jpg);
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
     }
 }
 
