deploy: 160a78aeb2e857a072eec135cf9f4ba86d08274b

--- a/css/index.css
+++ b/css/index.css
@@ -214,6 +214,8 @@ main {
 .content .katex {
     overflow-x: auto;
     overflow-y: hidden;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
 .content p, .content li, .content dl, .content dt {
